Dodavanje grupa na rute
