# docs/swagger.json
@@ -1,24 +1,10 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is the API for the Radionica application.",
-        "title": "Radionica API",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
-        },
-        "license": {
-            "name": "MIT",
-            "url": "https://opensource.org/licenses/MIT"
-        },
-        "version": "1.0"
+        "contact": {}
     },
-    "host": "localhost:8080",
-    "basePath": "/",
     "paths": {
-        "/login": {
+        "/v1/api/login": {
             "post": {
                 "description": "Authenticates a user and returns a JWT token",
                 "consumes": [
@@ -64,7 +50,7 @@
                 }
             }
         },
-        "/news": {
+        "/v1/api/news": {
             "get": {
                 "description": "Retrieves a list of all news items",
                 "produces": [
@@ -148,7 +134,7 @@
                 }
             }
         },
-        "/register": {
+        "/v1/api/register": {
             "post": {
                 "description": "Creates a new user with the provided username and password",
                 "consumes": [
@@ -284,13 +270,6 @@
                     "type": "string"
                 }
             }
-        }
-    },
-    "securityDefinitions": {
-        "BearerAuth": {
-            "type": "apiKey",
-            "name": "Authorization",
-            "in": "header"
         }
     }
 }
